Upgrading to Java 8: removing MaxPerm setting since java 8 does not have perm gen space