@@ -196,7 +196,7 @@
         <failsafe.failIfNoTests>false</failsafe.failIfNoTests>
         <failsafe.forkCount>1</failsafe.forkCount>
         <failsafe.reuseForks>true</failsafe.reuseForks>
-	    <failsafe.memOpts>-Xmx1536m -XX:MaxPermSize=512m</failsafe.memOpts>
+	    <failsafe.memOpts>-Xmx1536m</failsafe.memOpts>
         <failsafe.argLine>${failsafe.memOpts} ${javaagent.arg}</failsafe.argLine>
         <failsafe.aggregate>true</failsafe.aggregate>
         <failsafe.skipITs>true</failsafe.skipITs>
